Added endpoint to get characters by partial name
