# backend/api/swagger.yaml
@@ -1,4 +1,3 @@
----
 swagger: "2.0"
 info:
   description: "TTBBDD API"
@@ -6,49 +5,46 @@ info:
   title: "TTBBDD API"
 host: "localhost:3000"
 tags:
-- name: "characters"
-  description: "Charcters API"
-- name: "comics"
-  description: "Comics API"
+  - name: "characters"
+    description: "Charcters API"
+  - name: "comics"
+    description: "Comics API"
 schemes:
-- "http"
+  - "http"
 paths:
   /characters:
     get:
       tags:
-      - "characters"
+        - "characters"
       summary: "Get all characters"
       description: "Get all characters"
       operationId: "getAll"
       produces:
-      - "application/json"
-      parameters: []
+        - "application/json"
       responses:
         "200":
           description: "successful operation"
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Character"
+              $ref: '#/definitions/Character'
         "405":
           description: "Invalid input"
-      x-swagger-router-controller: "Characters"
-  /characters/findByName:
+  /characters/findMatchingName:
+    x-swagger-router-controller: "Characters"
     get:
       tags:
-      - "characters"
-      summary: "Finds characters by name"
-      description: "Multiple name values can be provided as array of string"
-      operationId: "findCharactersByName"
+        - "characters"
+      summary: "Finds characters matching name"
+      description: ""
+      operationId: "findCharactersMatchingName"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "name"
-        in: "query"
-        description: "Name values that need to be considered for filter"
-        required: true
-        type: "array"
-        items:
+        - name: "name"
+          in: "query"
+          description: "Name value that need to be considered for filter"
+          required: true
           type: "string"
       responses:
         "200":
@@ -56,10 +52,478 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Character"
+              $ref: '#/definitions/Character'
         "400":
           description: "Invalid status value"
-      x-swagger-router-controller: "Characters"
+  /characters/findByName:
+    get:
+      tags:
+        - "characters"
+      summary: "Finds characters by name"
+      description: "Multiple name values can be provided with comma separated strings"
+      operationId: "findCharactersByName"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "name"
+          in: "query"
+          description: "Name values that need to be considered for filter"
+          required: true
+          type: "array"
+          items:
+            type: "string"
+          collectionFormat: "multi"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: '#/definitions/Character'
+        "400":
+          description: "Invalid status value"
+  # /pet/findByTags:
+  #   get:
+  #     tags:
+  #     - "pet"
+  #     summary: "Finds Pets by tags"
+  #     description: "Muliple tags can be provided with comma separated strings. Use         tag1, tag2, tag3 for testing."
+  #     operationId: "findPetsByTags"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "tags"
+  #       in: "query"
+  #       description: "Tags to filter by"
+  #       required: true
+  #       type: "array"
+  #       items:
+  #         type: "string"
+  #       collectionFormat: "multi"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           type: "array"
+  #           items:
+  #             $ref: "#/definitions/Pet"
+  #       "400":
+  #         description: "Invalid tag value"
+  #     security:
+  #     - petstore_auth:
+  #       - "write:pets"
+  #       - "read:pets"
+  #     deprecated: true
+  # /pet/{petId}:
+  #   get:
+  #     tags:
+  #     - "pet"
+  #     summary: "Find pet by ID"
+  #     description: "Returns a single pet"
+  #     operationId: "getPetById"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "petId"
+  #       in: "path"
+  #       description: "ID of pet to return"
+  #       required: true
+  #       type: "integer"
+  #       format: "int64"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           $ref: "#/definitions/Pet"
+  #       "400":
+  #         description: "Invalid ID supplied"
+  #       "404":
+  #         description: "Pet not found"
+  #     security:
+  #     - api_key: []
+  #   post:
+  #     tags:
+  #     - "pet"
+  #     summary: "Updates a pet in the store with form data"
+  #     description: ""
+  #     operationId: "updatePetWithForm"
+  #     consumes:
+  #     - "application/x-www-form-urlencoded"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "petId"
+  #       in: "path"
+  #       description: "ID of pet that needs to be updated"
+  #       required: true
+  #       type: "integer"
+  #       format: "int64"
+  #     - name: "name"
+  #       in: "formData"
+  #       description: "Updated name of the pet"
+  #       required: false
+  #       type: "string"
+  #     - name: "status"
+  #       in: "formData"
+  #       description: "Updated status of the pet"
+  #       required: false
+  #       type: "string"
+  #     responses:
+  #       "405":
+  #         description: "Invalid input"
+  #     security:
+  #     - petstore_auth:
+  #       - "write:pets"
+  #       - "read:pets"
+  #   delete:
+  #     tags:
+  #     - "pet"
+  #     summary: "Deletes a pet"
+  #     description: ""
+  #     operationId: "deletePet"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "api_key"
+  #       in: "header"
+  #       required: false
+  #       type: "string"
+  #     - name: "petId"
+  #       in: "path"
+  #       description: "Pet id to delete"
+  #       required: true
+  #       type: "integer"
+  #       format: "int64"
+  #     responses:
+  #       "400":
+  #         description: "Invalid ID supplied"
+  #       "404":
+  #         description: "Pet not found"
+  #     security:
+  #     - petstore_auth:
+  #       - "write:pets"
+  #       - "read:pets"
+  # /pet/{petId}/uploadImage:
+  #   post:
+  #     tags:
+  #     - "pet"
+  #     summary: "uploads an image"
+  #     description: ""
+  #     operationId: "uploadFile"
+  #     consumes:
+  #     - "multipart/form-data"
+  #     produces:
+  #     - "application/json"
+  #     parameters:
+  #     - name: "petId"
+  #       in: "path"
+  #       description: "ID of pet to update"
+  #       required: true
+  #       type: "integer"
+  #       format: "int64"
+  #     - name: "additionalMetadata"
+  #       in: "formData"
+  #       description: "Additional data to pass to server"
+  #       required: false
+  #       type: "string"
+  #     - name: "file"
+  #       in: "formData"
+  #       description: "file to upload"
+  #       required: false
+  #       type: "file"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           $ref: "#/definitions/ApiResponse"
+  #     security:
+  #     - petstore_auth:
+  #       - "write:pets"
+  #       - "read:pets"
+  # /store/inventory:
+  #   get:
+  #     tags:
+  #     - "store"
+  #     summary: "Returns pet inventories by status"
+  #     description: "Returns a map of status codes to quantities"
+  #     operationId: "getInventory"
+  #     produces:
+  #     - "application/json"
+  #     parameters: []
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           type: "object"
+  #           additionalProperties:
+  #             type: "integer"
+  #             format: "int32"
+  #     security:
+  #     - api_key: []
+  # /store/order:
+  #   post:
+  #     tags:
+  #     - "store"
+  #     summary: "Place an order for a pet"
+  #     description: ""
+  #     operationId: "placeOrder"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - in: "body"
+  #       name: "body"
+  #       description: "order placed for purchasing the pet"
+  #       required: true
+  #       schema:
+  #         $ref: "#/definitions/Order"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           $ref: "#/definitions/Order"
+  #       "400":
+  #         description: "Invalid Order"
+  # /store/order/{orderId}:
+  #   get:
+  #     tags:
+  #     - "store"
+  #     summary: "Find purchase order by ID"
+  #     description: "For valid response try integer IDs with value >= 1 and <= 10.         Other values will generated exceptions"
+  #     operationId: "getOrderById"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "orderId"
+  #       in: "path"
+  #       description: "ID of pet that needs to be fetched"
+  #       required: true
+  #       type: "integer"
+  #       maximum: 10.0
+  #       minimum: 1.0
+  #       format: "int64"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           $ref: "#/definitions/Order"
+  #       "400":
+  #         description: "Invalid ID supplied"
+  #       "404":
+  #         description: "Order not found"
+  #   delete:
+  #     tags:
+  #     - "store"
+  #     summary: "Delete purchase order by ID"
+  #     description: "For valid response try integer IDs with positive integer value.         Negative or non-integer values will generate API errors"
+  #     operationId: "deleteOrder"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "orderId"
+  #       in: "path"
+  #       description: "ID of the order that needs to be deleted"
+  #       required: true
+  #       type: "integer"
+  #       minimum: 1.0
+  #       format: "int64"
+  #     responses:
+  #       "400":
+  #         description: "Invalid ID supplied"
+  #       "404":
+  #         description: "Order not found"
+  # /user:
+  #   post:
+  #     tags:
+  #     - "user"
+  #     summary: "Create user"
+  #     description: "This can only be done by the logged in user."
+  #     operationId: "createUser"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - in: "body"
+  #       name: "body"
+  #       description: "Created user object"
+  #       required: true
+  #       schema:
+  #         $ref: "#/definitions/User"
+  #     responses:
+  #       default:
+  #         description: "successful operation"
+  # /user/createWithArray:
+  #   post:
+  #     tags:
+  #     - "user"
+  #     summary: "Creates list of users with given input array"
+  #     description: ""
+  #     operationId: "createUsersWithArrayInput"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - in: "body"
+  #       name: "body"
+  #       description: "List of user object"
+  #       required: true
+  #       schema:
+  #         type: "array"
+  #         items:
+  #           $ref: "#/definitions/User"
+  #     responses:
+  #       default:
+  #         description: "successful operation"
+  # /user/createWithList:
+  #   post:
+  #     tags:
+  #     - "user"
+  #     summary: "Creates list of users with given input array"
+  #     description: ""
+  #     operationId: "createUsersWithListInput"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - in: "body"
+  #       name: "body"
+  #       description: "List of user object"
+  #       required: true
+  #       schema:
+  #         type: "array"
+  #         items:
+  #           $ref: "#/definitions/User"
+  #     responses:
+  #       default:
+  #         description: "successful operation"
+  # /user/login:
+  #   get:
+  #     tags:
+  #     - "user"
+  #     summary: "Logs user into the system"
+  #     description: ""
+  #     operationId: "loginUser"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "username"
+  #       in: "query"
+  #       description: "The user name for login"
+  #       required: true
+  #       type: "string"
+  #     - name: "password"
+  #       in: "query"
+  #       description: "The password for login in clear text"
+  #       required: true
+  #       type: "string"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           type: "string"
+  #         headers:
+  #           X-Rate-Limit:
+  #             type: "integer"
+  #             format: "int32"
+  #             description: "calls per hour allowed by the user"
+  #           X-Expires-After:
+  #             type: "string"
+  #             format: "date-time"
+  #             description: "date in UTC when token expires"
+  #       "400":
+  #         description: "Invalid username/password supplied"
+  # /user/logout:
+  #   get:
+  #     tags:
+  #     - "user"
+  #     summary: "Logs out current logged in user session"
+  #     description: ""
+  #     operationId: "logoutUser"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters: []
+  #     responses:
+  #       default:
+  #         description: "successful operation"
+  # /user/{username}:
+  #   get:
+  #     tags:
+  #     - "user"
+  #     summary: "Get user by user name"
+  #     description: ""
+  #     operationId: "getUserByName"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "username"
+  #       in: "path"
+  #       description: "The name that needs to be fetched. Use user1 for testing. "
+  #       required: true
+  #       type: "string"
+  #     responses:
+  #       "200":
+  #         description: "successful operation"
+  #         schema:
+  #           $ref: "#/definitions/User"
+  #       "400":
+  #         description: "Invalid username supplied"
+  #       "404":
+  #         description: "User not found"
+  #   put:
+  #     tags:
+  #     - "user"
+  #     summary: "Updated user"
+  #     description: "This can only be done by the logged in user."
+  #     operationId: "updateUser"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "username"
+  #       in: "path"
+  #       description: "name that need to be updated"
+  #       required: true
+  #       type: "string"
+  #     - in: "body"
+  #       name: "body"
+  #       description: "Updated user object"
+  #       required: true
+  #       schema:
+  #         $ref: "#/definitions/User"
+  #     responses:
+  #       "400":
+  #         description: "Invalid user supplied"
+  #       "404":
+  #         description: "User not found"
+  #   delete:
+  #     tags:
+  #     - "user"
+  #     summary: "Delete user"
+  #     description: "This can only be done by the logged in user."
+  #     operationId: "deleteUser"
+  #     produces:
+  #     - "application/xml"
+  #     - "application/json"
+  #     parameters:
+  #     - name: "username"
+  #       in: "path"
+  #       description: "The name that needs to be deleted"
+  #       required: true
+  #       type: "string"
+  #     responses:
+  #       "400":
+  #         description: "Invalid username supplied"
+  #       "404":
+  #         description: "User not found"
 definitions:
   CharacterInfo:
     type: "object"
@@ -80,15 +544,7 @@ definitions:
         type: "string"
       weight:
         type: "string"
-    example:
-      eye_color: "eye_color"
-      gender: "gender"
-      skin_color: "skin_color"
-      publisher: "publisher"
-      weight: "weight"
-      alignment: "alignment"
-      hair_color: "hair_color"
-      height: "height"
+
   CharacterStats:
     type: "object"
     properties:
@@ -104,13 +560,7 @@ definitions:
         type: "number"
       combat:
         type: "number"
-    example:
-      strength: 1.46581298050294517310021547018550336360931396484375
-      durability: 5.63737665663332876420099637471139430999755859375
-      combat: 7.061401241503109105224211816675961017608642578125
-      power: 2.3021358869347654518833223846741020679473876953125
-      speed: 5.962133916683182377482808078639209270477294921875
-      intelligence: 6.02745618307040320615897144307382404804229736328125
+
   CrossOver:
     type: "object"
     properties:
@@ -130,15 +580,7 @@ definitions:
         type: "string"
       extraInfo:
         type: "string"
-    example:
-      appearances: 3.61607674925191080461672754609026014804840087890625
-      firstAppearance: "firstAppearance"
-      year: 2.027123023002321833274663731572218239307403564453125
-      identity: "identity"
-      universe: "universe"
-      alignment: "alignment"
-      status: "status"
-      extraInfo: "extraInfo"
+
   Character:
     type: "object"
     properties:
@@ -148,9 +590,11 @@ definitions:
       name:
         type: "string"
       info:
-        $ref: "#/definitions/CharacterInfo"
+        type: "object"
+        $ref: '#/definitions/CharacterInfo'
       stats:
-        $ref: "#/definitions/CharacterStats"
+        type: "object"
+        $ref: '#/definitions/CharacterStats'
       comics:
         type: "array"
         items:
@@ -162,49 +606,9 @@ definitions:
       crossOvers:
         type: "array"
         items:
-          $ref: "#/definitions/CrossOver"
-    example:
-      crossOvers:
-      - appearances: 3.61607674925191080461672754609026014804840087890625
-        firstAppearance: "firstAppearance"
-        year: 2.027123023002321833274663731572218239307403564453125
-        identity: "identity"
-        universe: "universe"
-        alignment: "alignment"
-        status: "status"
-        extraInfo: "extraInfo"
-      - appearances: 3.61607674925191080461672754609026014804840087890625
-        firstAppearance: "firstAppearance"
-        year: 2.027123023002321833274663731572218239307403564453125
-        identity: "identity"
-        universe: "universe"
-        alignment: "alignment"
-        status: "status"
-        extraInfo: "extraInfo"
-      stats:
-        strength: 1.46581298050294517310021547018550336360931396484375
-        durability: 5.63737665663332876420099637471139430999755859375
-        combat: 7.061401241503109105224211816675961017608642578125
-        power: 2.3021358869347654518833223846741020679473876953125
-        speed: 5.962133916683182377482808078639209270477294921875
-        intelligence: 6.02745618307040320615897144307382404804229736328125
-      comics:
-      - 9.301444243932575517419536481611430644989013671875
-      - 9.301444243932575517419536481611430644989013671875
-      name: "name"
-      _id: 0
-      powers:
-      - "powers"
-      - "powers"
-      info:
-        eye_color: "eye_color"
-        gender: "gender"
-        skin_color: "skin_color"
-        publisher: "publisher"
-        weight: "weight"
-        alignment: "alignment"
-        hair_color: "hair_color"
-        height: "height"
+          $ref: '#/definitions/CrossOver'
+
+
   Comic:
     type: "object"
     properties:
@@ -215,6 +619,7 @@ definitions:
         type: "string"
       issue:
         type: "number"
+
   ApiResponse:
     type: "object"
     properties:
